--- a/movies/Ready_Player_One.html
+++ b/movies/Ready_Player_One.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Ready Player One</title>
     <link rel="stylesheet" href="../style/style1.css">
