--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	  		<div id="box_text">
 	  			<p>Hello everyone. My full name is  <b>Khusainov Khusniddin.</b> I'm - a <i>student of IUT.</i> There is some information about myself.</p>
 	  			<p>My ID number: <big>U1810179</big> </p>
-	  		    <p>Group number: 004(IntroToIT) or CIE - 18 - 18 </p> 
+	  		    <p>Group number: 002(Internet Programming) or CIE - 18 - 08 </p> 
 	  		    <p>When it comes to my <strong>Hobbies</strong> or <strong>Interests</strong>, I can tell you some of them :</p>
 				<ul>
 					<li>Coding</li>
