--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>My_Webpage</title>
     <link rel="stylesheet"  href="style/style.css">
+	<link rel="icon" href="favicon.ico" type="image/gif">
 </head>
 <body>
 	<div id="content">
