initializing all files

--- a/index.html
+++ b/index.html
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
+
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <title>My_Webpage</title>
-    <link rel="stylesheet"  href="style/style.css">
-	<link rel="icon" href="favicon.ico" type="image/gif">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NERDS</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	<div id="content">
-	  	<div id="header">
-			<a href="index.html">Home</a> <span></span>
-			<a href="movies/movie.html" alt=_blank>My Favorite Movies</a> <span></span>
-		</div>
-	  	<h1>Khusainov Khusniddin</h1>
-	  	<div id="center">
-	  		<img src="img/happy_man.jpg" alt="фотография">
-	  		<div id="box_text">
-	  			<p>Hello everyone. My full name is  <b>Khusainov Khusniddin.</b> I'm - a <i>student of IUT.</i> There is some information about myself.</p>
-	  			<p>My ID number: <big>U1810179</big> </p>
-	  		    <p>Group number: 002(Internet Programming) or CIE - 18 - 08 </p> 
-	  		    <p>When it comes to my <strong>Hobbies</strong> or <strong>Interests</strong>, I can tell you some of them :</p>
-				<ul>
-					<li>Coding</li>
-					<li>Cooking</li>
-					<li>Getting new knowledge and following IT - news</li>
-					<li>Create AI [even it is my dream]</li>
-					<li>Playing Dota 2 and PUBG</li>
-
-				</ul>
-
-	  			 <a href="movies/movie.html" title="Link to my movies pages">My Favourite Movies</a>
-	  			<br>
-	  			<br>
-	  		</div>
-	  	</div>
-	</div>
-	<div id="footer">Copyright &copy 2020 <a href="#" target="_blank">XMA</a></div>
+    <header class="main-header">
+        <nav class="main-navigation">
+            <ul class="site-navigation">
+                <li><a href="studio.html">Студия</a></li>
+                <li><a href="clients.html">Клиенты</a></li>
+                <li><a href="catalog.html">Магазин</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
