--- a/index.html
+++ b/index.html
@@ -5,23 +5,179 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NERDS</title>
-    <link rel="stylesheet" href="css/normalize.css">
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- CSS Stylesheets -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="main-header">
         <nav class="main-navigation">
+            <a class="main-header-logo">
+                <img src="img/nerds-logo.svg" alt="Nerds Logo" width="160" height="65">
+            </a>
             <ul class="site-navigation">
                 <li><a href="studio.html">Студия</a></li>
                 <li><a href="clients.html">Клиенты</a></li>
                 <li><a href="catalog.html">Магазин</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
             </ul>
+            <ul class="store-navigation">
+                <li class="store-link">
+                    <a class="store-link" href="store.html">Магазин</a>
+                </li>
+            </ul>
         </nav>
+        <section class="slider">
+            <div class="slider-item">
+                <b class="slider-header">Долго, дорого, скрупулезно.</b>
+                <p class="slider-description">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                <img src="img/slider-item-1.png" alt="slider image one" width="760" height="431">
+                <a href="more.html" class="button slider-button">Узнать больше</a>
+            </div>
+            <!-- <div class="slider-item">
+                <b class="slider-header">Любим математику как никто другой</b>
+                <p class="slider-description">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+                <img src="img/slider-item-2.png" alt="slider image two" width="760" height="431">
+                <a href="more.html" class="button slider-button">Узнать больше</a>
+            </div>
+            <div class="slider-item">
+                <b class="slider-header">Только ночь, только хардкор</b>
+                <p class="slider-description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <img src="img/slider-item-3.png" alt="slider image three" width="760" height="431">
+                <a href="more.html" class="button slider-button">Узнать больше</a>
+            </div> -->
+        </section>
     </header>
+
+    <main class="container">
+        <h1 class="visually-hidden">Studio "Nerds"</h1>
+
+        <section class="products">
+            <h2 class="visually-hidden">Products of Nerds studio</h2>
+            <div class="product-item">
+                <img src="img/product-image-1.jpg" alt="product item image one" width="300" height="146">
+                <h3 class="product-item-header">Веб-сайты</h3>
+                <p class="product-item-info">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                <a href="" class="button product-item-button">Заказать</a>
+            </div>
+            <div class="product-item">
+                <img src="img/product-image-2.jpg" alt="product item image two" width="300" height="146">
+                <h3 class="product-item-header">Приложения</h3>
+                <p class="product-item-info">Покорите топ-10 приложений в AppStore и Google Play</p>
+                <a href="" class="button product-item-button two">Заказать</a>
+            </div>
+            <div class="product-item">
+                <img src="img/product-image-3.jpg" alt="product item image three" width="300" height="146">
+                <h3 class="product-item-header">Презентации</h3>
+                <p class="product-item-info">Вы даже не подозреваете, насколько вы изумительны!</p>
+                <a href="" class="button product-item-button three">Заказать</a>
+            </div>
+        </section>
+
+
+        <section class="info">
+            <h2 class="visually-hidden">Информация о нас</h2>
+            <div class="index-columns">
+
+
+                <div class="left-side">
+                    <b class="info-header">Мы — маленькая, но гордая дизайн-студия из Краснодара. </b>
+                    <p class="info-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+                    <h4 class="info-list-header">Выполняем заказы на разработку:</h4>
+                    <ul class="info-list">
+                        <li class="info-list-item">Веб-сайтов любой сложности</li>
+                        <li class="info-list-item">Мобильных приложений для iOS и Android</li>
+                        <li class="info-list-item">Слайдшоу и видео для корпоративных презентаций</li>
+                    </ul>
+                </div>
+
+                <div class="right-side">
+                    <img src="img/nerds-illustration.jpg" alt="nerds illustration" width="360" height="208">
+                    <div class="info-table">
+                        <b class="info-table-header">с 2004 года Любим точность во всем:</b>
+                        <div class="info-table-item">
+                            <b class="info-table-item-percent">146<sup>%</sup></b>
+                            <p class="info-table-item-percent-details">Уровень самоотдачи</p>
+                        </div>
+                        <div class="info-table-item">
+                            <b class="info-table-item-percent">100<sup>%</sup></b>
+                            <p class="info-table-item-percent-details">Соблюдение сроков</p>
+                        </div>
+                        <div class="info-table-item">
+                            <b class="info-table-item-percent">50<sup>%</sup></b>
+                            <p class="info-table-item-percent-details">Минимальная доплата</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="templates">
+            <h2 class="visually-hidden">Template's logo</h2>
+            <img src="img/logo-html.png" alt="borodinski logo" width="260" height="180" class="templates-logo">
+            <img src="img/logo-borodinski.png" alt="borodinski logo" width="260" height="180" class="templates-logo">
+            <img src="img/logo-pink.png" alt="pink logo" width="260" height="180" class="templates-logo">
+            <img src="img/logo-mishka.png" alt="mishka logo" width="260" height="180" class="templates-logo">
+        </section>
+    </main>
+
+    <footer class="main-footer">
+
+        <img src="img/map.jpg" alt="191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+        <section class="footer-contacts">
+            <h2 class="visually-hidden">Contacts</h2>
+            <h3 class="footer-contacts-header">NЁRDS DESIGN STUDIO</h3>
+            <p class="footer-contacts-details">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><br> тел. +7 (812) 275-75-75</p>
+            <a href="modal-write-us.html" class="button contacts-button">Напишите нам</a>
+        </section>
+
+        <section class="footer-social">
+            <ul>
+                <li>
+                    <a class="social-button" href="#">Вконтакте</a>
+                </li>
+                <li>
+                    <a class="social-button" href="#">Фейсбук</a>
+                </li>
+                <li>
+                    <a class="social-button" href="#">Инстаграм</a>
+                </li>
+            </ul>
+            <p class="social-text">
+                <b class="social-text-header">Давайте дружить, это выгодно!</b> <br><br> Скидка 10% для друзей из социальных сетей.
+            </p>
+        </section>
+    </footer>
+
+    <section class="modal modal-write-us">
+        <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+            <h2 class="modal-write-us-header">Напишите нам</h2>
+            <p class="write-us-item">
+                <label for="write-us-name">Ваше имя:</label>
+                <input type="text" name="name" value="" placeholder="Имя Фамилия" id="write-us-name">
+            </p>
+
+            <p class="write-us-item">
+                <label for="write-us-email">Ваше e-mail:</label>
+                <input type="email" name="email" value="" placeholder="email@example.com" id="write-us-email">
+            </p>
+            <p class="write-us-item">
+                <label for="write-us-text">Текст письма:</label>
+                <textarea name="text" id="write-us-text" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+            </p>
+
+            <button class="button" type="submit">Отправить</button>
+            <button class="modale-close" type="button">Закрыть</button>
+        </form>
+    </section>
+
 </body>
 
 </html>
