--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/newstyle.css">
 </head>
 
 <body>
